# plato

./: .gitignore  .travis.yml  AUTHORS  BoolTest.hs  BuckExample.hs  Circuit.hs  Concept.hs  LICENSE  Main.hs  README.md  SimTest.hs  Test.hs  Tests.hs  TransTest.hs  appveyor.yml  concepts.cabal  plato.cabal  signal-types-hacking.hs  stack.yaml
Circuit/: Concept.hs  Dynamics.hs
boolToConcept/: Main.hs
doc/: manual.md
examples/: Celement_with_env_1.hs  Celement_with_env_2.hs  Celement_with_env_3.hs  Concept.hs  celement-concept-concat.hs  celement-concept.hs  zcAbsent_scenario.hs  zcEarly_scenario.hs  zcLate_scenario.hs
simulate/: Main.hs
src/Hardware/: Concepts.hs
src/Hardware/Concepts/: Abstract.hs  Circuit.hs  Simulation.hs
src/Hardware/Concepts/Examples/: SimpleBuck.hs
src/Tuura/: Boolean.hs  Concept.hs  ConceptConcat.hs  Concepts.hs  PetriNet.hs  SelfDual.hs
src/Tuura/Boolean/: Options.hs  Parser.hs
src/Tuura/Concept/: Abstract.hs  Circuit.hs  FSM.hs  STG.hs  Signal.hs  Simulation.hs
src/Tuura/Concept/Circuit/: Abstract.hs  Basic.hs  Derived.hs
src/Tuura/Concept/Concat/: Abstract.hs  Circuit.hs  Simulation.hs
src/Tuura/Concept/Examples/: SimpleBuck.hs
src/Tuura/Concept/FSM/: Abstract.hs  Circuit.hs  Simulation.hs  Translation.hs
src/Tuura/Concept/STG/: Abstract.hs  Circuit.hs  Simulation.hs  Translation.hs
src/Tuura/Concepts/: Abstract.hs  Circuit.hs  Simulation.hs
src/Tuura/Concepts/Examples/: SimpleBuck.hs
src/Tuura/Parser/: Boolean.hs
src/Tuura/Plato/: BoolToConcept.hs  BooleanFunctions.hs  Options.hs  Translation.hs
src/Tuura/Plato/BoolToConcept/: BooleanFunctions.hs  Options.hs
src/Tuura/Plato/Translate/: Options.hs  Translation.hs
translate/: Component.hs  ComponentMain.hs  Main.hs  System.hs  SystemMain.hs
