name:          concepts
version:       0.0.1
synopsis:      Hardware concepts
license:       BSD3
license-file:  LICENSE
author:        Tuura authors (see AUTHORS file)
maintainer:    Andrey Mokhov <andrey.mokhov@gmail.com>, github: @snowleopard
copyright:     Tuura authors (see AUTHORS file), 2015
homepage:      https://github.com/tuura/concepts
category:      Hardware
build-type:    Simple
cabal-version: >=1.10

source-repository head
    type:     git
    location: https://github.com/tuura/concepts.git

library
    hs-source-dirs:   src
    exposed-modules:  Tuura.Concept,
                      Tuura.Concept.Examples.SimpleBuck,
                      Tuura.Concept.Simulation,
                      Tuura.ConceptConcat,
                      Tuura.Concept.Concat.Simulation
    other-modules:    Tuura.Concept.Abstract,
                      Tuura.Concept.Circuit,
                      Tuura.Concept.Concat.Abstract,
                      Tuura.Concept.Concat.Circuit,
                      Tuura.PetriNet
    build-depends:    base >= 4.8 && < 5,
                      bifunctors == 5.3,
                      containers == 0.5.*,
                      mtl == 2.2.*,
                      transformers >= 0.4 && < 0.6
    default-language: Haskell2010
    other-extensions: TypeFamilies
    GHC-options:      -Wall -fwarn-tabs

executable simulate
    hs-source-dirs:   simulate
    main-is:          Main.hs
    build-depends:    base >= 4.8 && < 5,
                      text,
                      directory,
                      hint >= 0.6.0,
                      concepts
    default-language: Haskell2010
    GHC-options:      -Wall -fwarn-tabs

executable translate
    hs-source-dirs:   translate
    main-is:          Main.hs
    build-depends:    base >= 4.8 && < 5,
                      text,
                      directory,
                      hint >= 0.6.0,
                      concepts
    default-language: Haskell2010
    GHC-options:      -Wall -fwarn-tabs

test-suite concepts-test
    type:             exitcode-stdio-1.0
    main-is:          Test.hs
    build-depends:    base >= 4.8 && < 5,
                      concepts
    default-language: Haskell2010
    GHC-options:      -Wall -fwarn-tabs
