name:          plato
version:       0.0.1
synopsis:      Hardware concepts
license:       BSD3
license-file:  LICENSE
author:        Tuura authors (see AUTHORS file)
maintainer:    Andrey Mokhov <andrey.mokhov@gmail.com>, github: @snowleopard
copyright:     Tuura authors (see AUTHORS file), 2015
homepage:      https://github.com/tuura/plato
category:      Hardware
build-type:    Simple
cabal-version: >=1.10

source-repository head
    type:     git
    location: https://github.com/tuura/plato.git

library
    hs-source-dirs:   src
    exposed-modules:  Tuura.Concept,
                      Tuura.Concept.Examples.SimpleBuck,
                      Tuura.Concept.Simulation,
                      Tuura.Concept.STG,
                      Tuura.Concept.STG.Simulation,
                      Tuura.Concept.STG.Translation,
                      Tuura.Concept.FSM,
                      Tuura.Concept.FSM.Simulation,
                      Tuura.Concept.FSM.Translation,
                      Tuura.Plato.Translate.Options,
                      Tuura.Plato.Translate.Translation,
                      Tuura.Plato.BoolToConcept,
                      Tuura.Plato.BoolToConcept.Options
    other-modules:    Tuura.Concept.Abstract,
                      Tuura.Concept.Circuit,
                      Tuura.Concept.Circuit.Basic,
                      Tuura.Concept.Circuit.Derived,
                      Tuura.PetriNet
    build-depends:    base >= 4.8 && < 5,
                      bifunctors <5.4 || >5.4,
                      containers == 0.5.*,
                      mtl == 2.2.*,
                      hint >= 0.6.0,
                      transformers >= 0.4 && < 0.6,
                      extra >= 1.4.10,
                      text >= 1.2.2,
                      directory >= 1.2.2,
                      parsec,
                      pretty,
                      tuura-boolean
    default-language: Haskell2010
    other-extensions: TypeFamilies
    GHC-options:      -Wall -fwarn-tabs

test-suite simulation-test
    type:             exitcode-stdio-1.0
    main-is:          SimTest.hs
    build-depends:    base >= 4.8 && < 5,
                      plato
    default-language: Haskell2010
    GHC-options:      -Wall -fwarn-tabs

test-suite translation-test
    type:             exitcode-stdio-1.0
    main-is:          TransTest.hs
    build-depends:    base >= 4.8 && < 5,
                      plato
    default-language: Haskell2010
    GHC-options:      -Wall -fwarn-tabs

test-suite bool-to-concept-test
    type:             exitcode-stdio-1.0
    main-is:          BoolTest.hs
    build-depends:    base >= 4.8 && < 5,
                      plato,
                      tuura-boolean
    default-language: Haskell2010
    GHC-options:      -Wall -fwarn-tabs
